--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
 
-
     def lifecycle_version = "2.3.0"
 
     // ViewModel
@@ -60,4 +59,6 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    implementation project(':ratingbarsvg')
 }
