--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,15 +50,14 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
 
+    //Utilisation de l'architecture MVVM
     def lifecycle_version = "2.3.0"
-
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.squareup.picasso:picasso:2.71828' // Pour le download des photos
 
-    implementation project(':ratingbarsvg')
+    implementation project(':ratingbarsvg') // Pour l'implementation du ratingBar  pour le format SVG
 }
