Utilisation du DataBinding, Modification de l'Adapter et de MainViewModel.
Changement des noms des activités, et de leur layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.evaneos.evaneostest">
-
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EvaneosTest">
-        <activity android:name=".ui.activity.Show_Dest_WebView" />
+        <activity android:name=".ui.activity.DestinationDetail_WebView" />
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,5 +18,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
