--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,12 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828' // Pour le download des photos
 
     implementation project(':ratingbarsvg') // Pour l'implementation du ratingBar  pour le format SVG
+
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.0.1'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+
 }
